--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body {
 
 h1 {
   font-weight: bold;
+  margin: 0 0 30px 0;
 }
 
 .go-button {
@@ -21,6 +22,21 @@ h1 {
   border-radius: 5px;
   display: block;
   margin: 0 0 0 15px;
+}
+
+.form-check-input {
+  appearance: none;
+  border-radius: 50%;
+  width: 15px;
+  height: 15px;
+
+  border: 1px solid #999;
+  transition: 0.2s all linear;
+  margin-right: 5px;
+}
+
+.form-check-input:checked {
+  border: 6px solid blueviolet;
 }
 
 p {
