--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,15 @@
 body {
   font-family: "Courier New", Courier, monospace;
+  background-color: rgba(214, 168, 245, 0.75);
 }
 
 .app-wrapp {
+  background-color: rgba(244, 230, 252, 0.5);
   margin: 50px auto;
   padding: 35px;
-  max-width: 550px;
-  border: 1px solid grey;
+  max-width: 700px;
+  border-radius: 10px;
+  box-shadow: 0px 3px 5px 5px rgba(174, 131, 231, 0.5);
   text-align: center;
 }
 
@@ -42,4 +45,13 @@ h1 {
 p {
   margin: 25px 0 0 0;
   text-align: center;
+}
+
+.placeholder {
+  background-color: rgba(255, 255, 255, 0.5);
+  box-shadow: 0px 3px 5px 5px rgba(174, 131, 231, 0.5);
+  border-radius: 5px;
+  line-height: 230%;
+  padding: 5px;
+  margin: 0 auto;
 }
